--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <header>
         <div id="menu">
-            <div id="logo">
+            <div id="logo"><a href="#titlehome"></a>
             </div>
             <nav>
                 <ul>
@@ -41,7 +41,7 @@
         <div class="menu">
             <div class="dropdown">
                 <div id="logomobile">
-                    <img src="./Images/logohorizontal.svg" alt="">
+                    <a href="#titlehome"><img src="./Images/logohorizontal.svg" alt=""></a>
                 </div>
                 <button onclick="myFunction()" class="dropbtn"><embed src="./Images/BOTÃO_MENU.png"/></button>
                 <div id="myDropdown" class="dropdown-content">
@@ -91,9 +91,7 @@
         </div>
          <!-- OUR SERVICE -->
         <!-- TANK SERVICES -->
-        <div id="tankimg">
-            <img src="./Images/img2D.png" alt="">
-        </div>
+        <div id="tankimg"></div>
         <div id="tanktext">
             <div id="align">
                 <h1>Tank Services</h1>
