--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="menu">
             <div class="dropdown">
                 <div id="logomobile">
-                    <a href="#titlehome"><img src="./Images/logohorizontal.svg" alt=""></a>
+                    <a href="#redirectbanner"><img src="./Images/logohorizontal.svg" alt=""></a>
                 </div>
                 <button onclick="myFunction()" class="dropbtn"><embed src="./Images/BOTÃO_MENU.png"/></button>
                 <div id="myDropdown" class="dropdown-content">
