ajustes to mobile
Align tank services, align bullets with fonts

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <!-- TANK SERVICES -->
         <div id="tankimg"></div>
         <div id="tanktext">
-            <div id="align">
+            <div id="aligntank">
                 <h1>Tank Services</h1>
                 <p>Tank cleaning and preparation for inspections</p>
                 <p>Tank cleaning for product changes</p>
