troca logos footer

--- a/index.html
+++ b/index.html
@@ -151,9 +151,7 @@
     </section>
 
     <footer>
-        <div id="flogo">
-            <img src="./Images/logohorizontal.svg" alt="">
-        </div>
+        <div id="flogo"></div>
         <div id="infos">
             <h2>From the Ground Up.</h2>
             <p>790 NW 58th Street - Doral, FL 33166</p>
