--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
 <body>
     <header>
         <div id="menu">
-            <div id="logo"><a href="#titlehome"></a>
+            <div id="logo"></a>
             </div>
             <nav>
                 <ul>
-                    <li><a href="#titlehome">About</a></li>
-                    <li><a href="#redirectabout">Services</a>
+                    <li><a href="#redirectbanner">About</a></li>
+                    <li><a href="#">Services</a>
                         <!-- First Tier Drop Down -->
                         <ul>
                             <li><a href="#tanktext">Tank Services</a></li>
