--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
 <body>
     <header>
         <div id="menu">
-            <div id="logo"></a>
-            </div>
+            <a href="#redirectbanner">
+                <div id="logo"></div>
+            </a>
             <nav>
                 <ul>
                     <li><a href="#redirectbanner">About</a></li>
