--- a/index.html
+++ b/index.html
@@ -18,9 +18,8 @@
 <body>
     <header>
         <div id="menu">
-            <a href="#redirectbanner">
-                <div id="logo"></div>
-            </a>
+            <div id="logo">
+            </div>
             <nav>
                 <ul>
                     <li><a href="#redirectbanner">About</a></li>
