--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="./style.css">
     <script src="./custom.js"></script>
-
-    <link rel="icon" type="image/x-icon" href="./Images/favicon.svg">
+    <link rel="icon" type="image/svg+xml" href="./Images/favicon.svg" sizes="any">
 
     <title>Enviremelon</title>
 
