--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="./custom.js"></script>
     <link rel="icon" type="image/svg+xml" href="./Ativos/Favicon.svg" sizes="any">
 
-    <title>Enviremelon</title>
+    <title>Enviromelon</title>
 
 </head>
 
