Adds news breakpoints

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             <input type="text" name="lname" id="lname" placeholder="Last Name" required>
             <input type="email" id="email" name="e-mail" placeholder="Email" required>
             <input type="tel" id="phone" name="Phone" placeholder="Phone">
-            <textarea name="message" id="textarea"  placeholder="Leave your messagem here"></textarea>
+            <textarea name="message" id="textarea"  placeholder="Leave your message here"></textarea>
             <button type="submit" id="btn">Submit</button>
             <input type="hidden" name="_captcha" value="false">
             <input type="hidden" name="_next" value="https://https://kleberaugustotdev.vercel.app/thanks.html">
@@ -151,16 +151,12 @@
 
     <footer>
         <div id="flogo"></div>
-        <div id="infos">
+        <div id="infolocation">
+            <h2>790 NW 58th Street - Doral, FL 33166</h2>
+        </div>
+        <div id="infotext">
             <h2>From the Ground Up.</h2>
-            <p>790 NW 58th Street - Doral, FL 33166</p>
         </div>
-        <div id="social">
-            <p>info@enviremelon.com</p>
-            <img src="./Ativos/instagram.svg" alt="" onclick="window.location='https://www.instagram.com/enviromelon/'">
-            <img src="/Ativos/facebook.svg" alt="" onclick="window.location='#'">
-        </div>
-
     </footer>
 
 </body>
