--- a/index.html
+++ b/index.html
@@ -152,7 +152,8 @@
     <footer>
         <div id="flogo"></div>
         <div id="infolocation">
-            <h2>790 NW 58th Street - Doral, FL 33166</h2>
+            <h2>790 NW 58th Street<br> 
+                Doral, FL 33166</h2>
         </div>
         <div id="infotext">
             <h2>From the Ground Up.</h2>
