add page thanks

--- a/thanks.html
+++ b/thanks.html
@@ -10,9 +10,13 @@
     
     <div class="tnks">
         <div id="tnkstext">
-            <h1>Thanks for contacting us </h1>
-            <h2>Return to Home page: <a href="https://kleberaugustotdev.vercel.app/">https://kleberaugustotdev.vercel.app/</a></h2>
-        </div>
+            <div id="aligntnks">
+            <h1>Thank you for your contact!</h1>
+            <a href="https://enviromelon.vercel.app/" id="returntohome">
+                <button id="btnreturn">Return</button>
+             </a>
+            </div>
+        </div>    
     </div>
     
 
