--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
     </section>
     
     <section class="contact" id="redirectcontact">
-        <form action="https://formsubmit.co/kleberaugustodev@gmail.com" method="POST" id="form">
+        <form action="https://formsubmit.co/info@enviromelon.com" method="POST" id="form">
             <label id="title"><h1>Talk To Us</h1></label>
             <input type="text" name="fname" id="fname" placeholder="First Name" required>
             <input type="text" name="lname" id="lname" placeholder="Last Name" required>
@@ -145,7 +145,7 @@
             <textarea name="message" id="textarea"  placeholder="Leave your message here"></textarea>
             <button type="submit" id="btn">Submit</button>
             <input type="hidden" name="_captcha" value="false">
-            <input type="hidden" name="_next" value="https://https://kleberaugustotdev.vercel.app/thanks.html">
+            <input type="hidden" name="_next" value="https://enviromelon.com/thanks.html">
         </form>
     </section>
 
